tests/ui/restrictions/impl-feature-gate.without_gate.stderr
error[E0658]: restrictions are experimental
  --> $DIR/impl-feature-gate.rs:8:5
   |
LL | pub impl(crate) trait Bar {}
   |     ^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable

error[E0658]: restrictions are experimental
  --> $DIR/impl-feature-gate.rs:11:9
   |
LL |     pub impl(in foo) trait Baz {}
   |         ^^^^^^^^^^^^
   |
   = note: see issue #105077 <https://github.com/rust-lang/rust/issues/105077> for more information
   = help: add `#![feature(impl_restriction)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
